--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "lodash": "^4.16.6",
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
